--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>tpa-region-selection Demo</title>
+    <title>tpa-web-analytics Demo</title>
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="tpa-web-analytics-demo-component.html">
     <link rel="import" href="../../paper-card/paper-card.html">
